# WeatherBotAgain

./: .env-example  .gitignore  pyproject.toml
weatherbot/: main.py
weatherbot/handlers/: weather.py
weatherbot/services/: weather_service.py
